--- a/MinimalApi2/Properties/launchSettings.json
+++ b/MinimalApi2/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "hotels",
       "applicationUrl": "https://localhost:7070;http://localhost:5155",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "hotels",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
